apps/vaultwarden/vaultwarden/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: vaultwarden
  namespace: vaultwarden
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: ListenerSet
      name: vaultwarden
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: vaultwarden
          port: 8080
